testsuite/poke.pkl/computed-diag-2.pk
/* { dg-do compile } */

/* Labels are not allowed in computed fields.  */

type Foo =
  struct
  {
    int i;
    computed int j @ 23#B; /* { dg-error "" } */
  };
